# alternative-serde0

./: Cargo.toml  LICENSE  README.md
src/: deserializer.rs  err.rs  integration_test.rs  lib.rs  serializer.rs
